# cuvis-ai-inspecscrap

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml  cuvis_ai_compat.yml  release.yml
configs/pipeline/: metal_scrap_cnn2d.yaml  metal_scrap_cnn3d.yaml  metal_scrap_mlp.yaml
configs/plugins/: cuvis_ai_inspecscrap.yaml
configs/trainrun/: metal_scrap_cnn2d.yaml  metal_scrap_cnn3d.yaml  metal_scrap_mlp.yaml
cuvis_ai_inspecscrap/: __init__.py
cuvis_ai_inspecscrap/data/: __init__.py  dense_patch_datamodule.py  metal_scrap_datamodule.py  metal_scrap_object_patch_datamodule.py  metal_scrap_patch_datamodule.py  montage_column_datamodule.py
cuvis_ai_inspecscrap/node/: __init__.py  class_map_accumulator.py  data.py  deciders.py  labels.py  legend.py  losses.py  metrics.py  montage_sink.py  normalization.py  patch_sampler.py  text_draw.py
cuvis_ai_inspecscrap/node/classification/: __init__.py  base.py  cnn2d.py  cnn3d.py  mlp.py
cuvis_ai_inspecscrap/tests/: test_cnn_classifiers.py  test_dense_inference.py  test_loss_and_metrics.py  test_metal_scrap_datamodule.py  test_metal_scrap_patch_datamodule.py  test_montage_sink.py  test_normalization.py  test_patch_and_mlp.py  test_rgb_label_to_class_index.py
reports/: README.md  report_cuvis_ai_inspecscrap.html
reports/metrics/: metal_scrap_cnn2d_framework_results.md  metal_scrap_cnn2d_losshist.json  metal_scrap_cnn2d_objsplit_framework_results.md  metal_scrap_cnn2d_objsplit_losshist.json  metal_scrap_cnn3d_framework_results.md  metal_scrap_cnn3d_losshist.json  metal_scrap_cnn3d_objsplit_framework_results.md  metal_scrap_cnn3d_objsplit_losshist.json  metal_scrap_label_baseline.md  metal_scrap_mask_cleanup_results.md  metal_scrap_mlp_framework_results.md  metal_scrap_mlp_losshist.json  metal_scrap_mlp_objsplit_framework_results.md  metal_scrap_mlp_objsplit_losshist.json  metal_scrap_objectlevel_results.md
reports/models/: cleanup_confusions.pt  metal_scrap_cnn2d_framework.pt  metal_scrap_cnn2d_framework.yaml  metal_scrap_cnn2d_objsplit_framework.pt  metal_scrap_cnn2d_objsplit_framework.yaml  metal_scrap_cnn3d_framework.pt  metal_scrap_cnn3d_framework.yaml  metal_scrap_cnn3d_objsplit_framework.pt  metal_scrap_cnn3d_objsplit_framework.yaml  metal_scrap_mlp_framework.pt  metal_scrap_mlp_framework.yaml  metal_scrap_mlp_objsplit_framework.pt  metal_scrap_mlp_objsplit_framework.yaml  objectlevel_confusion.pt
scripts/: label_baseline.py  train_metal_scrap.py
tests/: test_blob_majority_vote.py  test_dense_inference.py  test_loss_and_metrics.py  test_metal_scrap_datamodule.py  test_metal_scrap_patch_datamodule.py  test_montage_sink.py  test_rgb_label_to_class_index.py  test_tiff_data_node.py
